--- a/bootstrap-iconpicker/css/bootstrap-iconpicker.css
+++ b/bootstrap-iconpicker/css/bootstrap-iconpicker.css
@@ -1,5 +1,5 @@
 /*!
- * Bootstrap-iconpicker v1.4.0
+ * Bootstrap-iconpicker v1.5.0
  *
  * Copyright 2013-2014 Victor Valencia Rico.
  * Licensed under the Apache License v2.0
@@ -24,10 +24,19 @@
     margin: 2px;
 }
 
+.table-icons td{    
+    min-width: 39px;
+}
+
 .popover {
     max-width: inherit !important;
 }
 
 .iconpicker-popover {
   z-index: 1050 !important;
+}
+
+.iconpicker-popover .search-control {
+    margin-bottom: 6px; 
+    margin-top: 6px;
 }
