Update version 1.6.0 documentation

--- a/bootstrap-3.2.0/css/pygments-manni.css
+++ b/bootstrap-3.2.0/css/pygments-manni.css
@@ -3,7 +3,7 @@
 .c { color: #999; } /* Comment */
 .err { color: #AA0000; background-color: #FFAAAA } /* Error */
 .k { color: #006699; } /* Keyword */
-.o { color: #555555 } /* Operator */
+.o { color: #27ae60 } /* Operator */
 .cm { color: #0099FF; font-style: italic } /* Comment.Multiline */
 .cp { color: #009999 } /* Comment.Preproc */
 .c1 { color: #999; } /* Comment.Single */
